<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sites.main</groupId>
    <artifactId>main-pom</artifactId>
    <version>4.2.6-SNAPSHOT</version>
    <!--versions:set -DnewVersion=4.2.5-SNAPSHOT-->
    <!--versions:update-child-modules-->
    <modules>
        <module>main4-common</module>
        <module>main4-session</module>
        <module>main4-ucenter</module>
        <module>main4-store</module>
        <module>main4-item</module>
        <module>main4-test</module>
        <module>main4-monitor</module>
        <module>main4-spread</module>
        <module>main4-tools</module>
        <module>web-server</module>
        <module>main4-order</module>
        <module>main4-daifa</module>
        <module>daifa-server</module>
        <module>daifa-sdk</module>
        <module>main4-sdks</module>
        <module>jdimg-server</module>
        <module>jdimg-sdk</module>
        <module>main4-photo</module>
        <module>main4-package</module>
        <module>sn-sdk</module>
        <module>sn-server</module>
    </modules>
    <packaging>pom</packaging>


    <properties>
        <main4-admin.version>${project.version}</main4-admin.version>
        <main4-tools.version>${project.version}</main4-tools.version>
        <main4-item-api.version>${project.version}</main4-item-api.version>
        <main4-monitor-api.version>${project.version}</main4-monitor-api.version>
        <main4-spread-api.version>${project.version}</main4-spread-api.version>
        <main4-spread-default.version>${project.version}</main4-spread-default.version>
        <main4-store-api.version>${project.version}</main4-store-api.version>
        <main4-session.version>${project.version}</main4-session.version>
        <main4-ucenter-api.version>${project.version}</main4-ucenter-api.version>
        <main4-common.version>${project.version}</main4-common.version>
        <main4-dao.version>${project.version}</main4-dao.version>
        <main4-store-default.version>${project.version}</main4-store-default.version>
        <main4-item-default.version>${project.version}</main4-item-default.version>
        <main4-monitor-default.version>${project.version}</main4-monitor-default.version>
        <main4-order-api.version>${project.version}</main4-order-api.version>
        <main4-order-default.version>${project.version}</main4-order-default.version>
        <main4-daifa-api.version>${project.version}</main4-daifa-api.version>
        <main4-daifa-default.version>${project.version}</main4-daifa-default.version>
        <main4-photo-api.version>${project.version}</main4-photo-api.version>
        <main4-photo-default.version>${project.version}</main4-photo-default.version>
        <main4-package-api.version>${project.version}</main4-package-api.version>
        <main4-package-defaule.version>${project.version}</main4-package-defaule.version>
        <main4-app-sdk.version>${project.version}</main4-app-sdk.version>
        <daifa-sdk.version>${project.version}</daifa-sdk.version>
        <jdimg-sdk.version>${project.version}</jdimg-sdk.version>
        <sn-sdk.version>${project.version}</sn-sdk.version>

        <!-- 新版sdk-->
        <pinduoduo-sdk.version>0.0.1-SNAPSHOT</pinduoduo-sdk.version>
        <!--淘宝请求代理-->
        <shigu-taobao-redirect-agent-tools.version>1.0-SNAPSHOT</shigu-taobao-redirect-agent-tools.version>

        <spring.version>4.3.9.RELEASE</spring.version>
        <syn-finder-api.version>4.0.0-SNAPSHOT</syn-finder-api.version>
        <orika.version>1.4.6</orika.version>
        <ehcache.version>2.7.0</ehcache.version>
        <shiro.version>1.2.3</shiro.version>
        <servlet-api.version>3.1.0</servlet-api.version>
        <fastjson.version>1.2.28</fastjson.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <mybatis.version>3.3.0</mybatis.version>
        <mybatis-spring.version>1.2.2</mybatis-spring.version>
        <mysql-connector-java.version>5.1.31</mysql-connector-java.version>
        <druid.version>1.0.15</druid.version>
        <opentae-common.version>1.0.0-SNAPSHOT</opentae-common.version>
        <persistence.version>1.0.2</persistence.version>
        <ezmorph.version>1.0.6</ezmorph.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-lang3.version>3.3.4</commons-lang3.version>
        <commons-fileupload.version>1.3.1</commons-fileupload.version>
        <javassist.version>3.19.0-GA</javassist.version>
        <xinzuo-mybatis.version>1.0.4-SNAPSHOT</xinzuo-mybatis.version>
        <xinzuo-mybatis-RO.version>1.0.5.RO-SNAPSHOT</xinzuo-mybatis-RO.version>
        <ons-client.version>1.6.0.Final</ons-client.version>

        <taobao-sdk.groupId>taobao-sdk-java-auto</taobao-sdk.groupId>
        <taobao-sdk.artifactId>taobao-sdk-java-auto</taobao-sdk.artifactId>
        <taobao-sdk.version>1535350529614</taobao-sdk.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>com.aliyun</groupId>
            <artifactId>opensearch</artifactId>
            <version>1.0.1-SNAPSHOT</version>
        </dependency>

        <!--测试用-->
        <dependency>
            <groupId>com.zhb</groupId>
            <artifactId>example</artifactId>
            <version>1.0.2</version>
            <scope>test</scope>
        </dependency>

        <!-- Excel 解析 -->
        <dependency>
            <groupId>net.sourceforge.jexcelapi</groupId>
            <artifactId>jxl</artifactId>
            <version>2.6.12</version>
        </dependency>
        <!--测试-->
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4-rule-agent</artifactId>
            <version>1.5.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito</artifactId>
            <version>1.6.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>1.6.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>4.1.6.RELEASE</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>nexus</id>
            <url>http://192.168.1.193:8882/nexus/content/groups/public/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>nexus</id>
            <url>http://192.168.1.193:8882/nexus/content/groups/public/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <!-- 配置私服地址 -->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>Nexus Release Repository</name>
            <url>http://192.168.1.193:8882/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>Nexus Snapshot Repository</name>
            <url>http://192.168.1.193:8882/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>
